--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <div class="grid-container">
+    <header class="header">
+      <div class="brand>
+        <a href="index.html". GoodGlobe Store
+      </div>
+      <div class="header-links">
+        <a href="cart.html">Cart</a>
+        <a href="signin.html">Sign In</a>
+      </div>
+    </header>
+        
 <head>
   <link rel="stylesheet" href="style.css">
   <title><GoodGlobe Store></title>
