--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <div class="grid-container">
-    <header class="header">
-      <div class="brand>
-        <a href="index.html". GoodGlobe Store
-      </div>
-      <div class="header-links">
-        <a href="cart.html">Cart</a>
-        <a href="signin.html">Sign In</a>
-      </div>
-    </header>
-        
+<html lang="en">        
 <head>
   <link rel="stylesheet" href="style.css">
   <title><GoodGlobe Store></title>
 </head>
 <body>
-  <div>
-    <header>
-      GoodGlobe Store
+<div class="grid-container">
+    <header class="header">
+      <div class="brand>
+        <a href="index.html"> GoodGlobe Store</a>
+      </div>
+      <div class="header-links">
+        <a href="cart.html">Cart</a>
+        <a href="signin.html">Sign In</a>
+      </div>
     </header>
     <aside>
       Shopping Categories
