--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div class="grid-container">
     <header class="header">
-      <div class="brand>
+      <div class="brand">
         <a href="index.html"> GoodGlobe Store</a>
       </div>
       <div class="header-links">
@@ -28,7 +28,8 @@
       </ul>
     </main>
     <footer>
-      §copy; 2024 GoodGlobe LLC </ footer›
+      &copy; 2024 GoodGlobe LLC 
+    </footer>
       </div>
 </body>
 </div>
